[gd_scene load_steps=2 format=3 uid="uid://t4mk5g5rw1eo"]

[ext_resource type="Script" path="res://scenes/ui/movement_keys_controller.gd" id="1_0s20x"]

[node name="MovementKeysController" type="HBoxContainer"]
size_flags_horizontal = 0
script = ExtResource("1_0s20x")

[node name="MoveLeftButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 10
text = "Left"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MoveUpButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Up"

[node name="MoveDownButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Down"

[node name="MoveRightButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 10
text = "Right"
